# cookiecutter-science-paper

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .travis.yml  README.md  setup.cfg
{{ cookiecutter.repo_name }}/.ci/: .coveragerc
{{ cookiecutter.repo_name }}/tests/: test_dummy.py
