[metadata]
name = {{ cookiecutter.pkg_name }}
version = attr: {{ cookiecutter.pkg_name }}.__version__
description=
    Code repository to reproduce results from {{cookiecutter.author_list}}
    {{cookiecutter.year}} published in {{cookiecutter.journal}}
long_description = file: README.md
long_description_content_type = markdown
license=
    {% if cookiecutter.open_source_license == 'MIT' %}MIT
    {% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3
    {% endif %}
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
setup_requires =
    setuptools>=39.2.0
    setuptools_scm
install_requires =
    setuptools_scm

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
